# bevy-jam-5

./: .gitignore  Cargo.toml  README.md  Trunk.toml  format.sh
.github/workflows/: release.yaml
assets/: CREDITS.md  tile-based-game.ldtk
assets/aseprite_originals/: character_animated.aseprite
assets/itch.io assets/: thumbnail.aseprite
assets/shaders/: fog_of_war.wgsl  fov_material.wgsl  post_processing.wgsl
assets/tile-based-game/backups/bf0ee7b0-25d0-11ef-8ee7-a77ac6e9f4f9_2024-07-20_18-32-58_crash/: tile-based-game.ldtk
src/: dev_tools.rs  input.rs  lib.rs  main.rs  postprocessing.rs  z_layers.rs
src/dev_tools/: grid_overlay.rs  line_of_sight_debug.rs  mod.rs
src/game/: animation.rs  assets.rs  camera.rs  dialog.rs  end_game.rs  ghost.rs  grid.rs  mod.rs  movement.rs  stamina.rs  threat.rs  utilities.rs
src/game/ai/: fov.rs  mod.rs  spawn_ai_proving_grounds.rs
src/game/audio/: mod.rs  sfx.rs  soundtrack.rs
src/game/dialog/: mod.rs
src/game/dialog/lines/: EnemyLosesPlayer.txt  EnemySpotsPlayer.txt  PlayerFindsKey.txt  PlayerSpawn.txt  PlayerUnlocksDoor.txt
src/game/grid/: collision.rs  grid_layout.rs  mod.rs  movement.rs
src/game/line_of_sight/: fog_of_war.rs  front_facing_edges.rs  mod.rs  vision.rs  vision_cones.rs
src/game/spawn/: bars.rs  door.rs  enemy.rs  exit.rs  goal.rs  health.rs  keys.rs  ldtk.rs  level.rs  mod.rs  player.rs
src/geometry_2d/: line_segment.rs  mod.rs
src/screen/: ai_proving_grounds.rs  credits.rs  game_over.rs  loading.rs  mod.rs  playing.rs  title.rs
src/testing/: mod.rs
src/visuals/: mod.rs
web/: index.html  style.css
